--- a/client/src/plus/deep-dives/feature/index.scss
+++ b/client/src/plus/deep-dives/feature/index.scss
@@ -12,6 +12,10 @@
   position: relative;
 
   @media #{layout.$mq-small-desktop-and-up} {
+    padding: layout.$base-spacing;
+  }
+
+  @media #{layout.$mq-large-desktop-and-up} {
     padding: layout.$base-spacing (layout.$base-spacing * 5);
   }
 
@@ -28,14 +32,14 @@
         height: 530px;
         position: absolute;
         right: 0;
-        top: -8px;
+        top: 15px;
         width: 460px;
       }
 
       @media #{layout.$mq-large-desktop-and-up} {
-        height: 650px;
-        top: 8px;
-        width: 560px;
+        height: 600px;
+        top: 5px;
+        width: 510px;
       }
     }
   }
@@ -53,22 +57,30 @@
     margin: 0 0 layout.$base-spacing 0;
 
     @media #{layout.$mq-small-desktop-and-up} {
-      margin-bottom: layout.$base-spacing * 2;
+      font-size: typography.$large-font-size;
+    }
+
+    @media #{layout.$mq-large-desktop-and-up} {
+      font-size: theme.$marketing-feature-h1-font-size;
     }
   }
 
   h2 {
     font-size: typography.$medium-font-size;
     margin: layout.$base-spacing 0;
+
+    @media #{layout.$mq-small-desktop-and-up} {
+      font-size: typography.$small-medium-font-size;
+    }
+
+    @media #{layout.$mq-large-desktop-and-up} {
+      font-size: typography.$medium-font-size;
+    }
   }
 
   p,
   ul {
-    font-size: typography.$small-medium-font-size-mobile;
-
-    @media #{layout.$mq-tablet-and-up} {
-      font-size: typography.$default-font-size;
-    }
+    font-size: typography.$default-font-size;
   }
 
   ul {
@@ -83,7 +95,8 @@
     content: "\002B";
     font-style: normal;
     font-weight: bold;
-    margin-left: -(math.div(layout.$base-spacing, 2));
+    margin-left: 0;
+    padding-right: 18px;
     position: relative;
   }
 
