--- a/client/src/plus/deep-dives/overview/index.scss
+++ b/client/src/plus/deep-dives/overview/index.scss
@@ -107,7 +107,7 @@
   }
 
   @media #{layout.$mq-large-desktop-and-up} {
-    margin: 0 auto layout.$base-spacing;
+    margin: 36px auto layout.$base-spacing;
     max-width: layout.$max-width-default;
   }
 
