style updates based on meeting feedback

--- a/client/src/plus/deep-dives/article-meta/index.scss
+++ b/client/src/plus/deep-dives/article-meta/index.scss
@@ -6,8 +6,8 @@
 
 ul.article-meta {
   border-top: theme.$standard-light-border;
-  margin-top: math.div(layout.$base-spacing, 2);
-  padding-top: math.div(layout.$base-spacing, 2);
+  margin-top: 20px;
+  padding-top: 18px;
 
   li {
     color: theme.$mdn-neutral700;
