--- a/client/src/plus/deep-dives/byline/index.scss
+++ b/client/src/plus/deep-dives/byline/index.scss
@@ -9,7 +9,7 @@
 
   @media #{layout.$mq-tablet-and-up} {
     display: flex;
-    gap: math.div(layout.$base-spacing, 2);
+    gap: 20px;
   }
 
   h3 {
@@ -18,8 +18,14 @@
     margin-top: math.div(layout.$base-spacing, 4);
   }
 
-  .author-description {
-    color: theme.$mdn-neutral700;
-    margin-bottom: 0;
+  .author-links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      margin-right: math.div(layout.$base-spacing, 4);
+    }
   }
 }
