changes based on review feedback

--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -199,7 +199,7 @@
   a.take-survey-link {
     &:link,
     &:visited {
-      background: linear-gradient(to right, #8565ff, #0dcbff);
+      background: linear-gradient(to right, #8565ff, #6581ff);
       color: theme.$white;
       display: block;
       font-size: 14px;
