--- a/client/src/plus/deep-dives/series-card/index.scss
+++ b/client/src/plus/deep-dives/series-card/index.scss
@@ -86,12 +86,13 @@
 
   @media #{layout.$mq-large-desktop-and-up} {
     display: block;
+    margin-bottom: 0;
   }
 
   a.take-survey-link {
     &:link,
     &:visited {
-      background: linear-gradient(to right, #8565ff, #0dcbff);
+      background: linear-gradient(to right, #8565ff, #6581ff);
       border-radius: 4px;
       color: theme.$white;
       display: block;
