further style updates and add product teaser component

--- a/client/src/plus/deep-dives/series-card/index.scss
+++ b/client/src/plus/deep-dives/series-card/index.scss
@@ -96,11 +96,11 @@
       border-radius: 4px;
       color: theme.$white;
       display: block;
-      font-size: 14px;
+      font-size: 18px;
       font-weight: bold;
       margin-top: layout.$base-spacing;
       min-height: 40px;
-      padding: math.div(layout.$base-spacing, 2);
+      padding: 20px;
       text-align: center;
     }
 
