--- a/client/src/plus/deep-dives/byline/index.scss
+++ b/client/src/plus/deep-dives/byline/index.scss
@@ -23,6 +23,13 @@
     margin: 0;
     padding: 0;
 
+    a {
+      &:link,
+      &:visited {
+        color: theme.$mdn-neutral700;
+      }
+    }
+
     li {
       display: inline-block;
       margin-right: math.div(layout.$base-spacing, 4);
