--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -24,6 +24,10 @@
     background-color: rgba(224, 224, 230, 0.5);
   }
 
+  img {
+    width: 100%;
+  }
+
   .main-heading-group {
     h1 {
       font-size: 48px;
@@ -90,7 +94,7 @@
 
   a {
     display: block;
-    padding: layout.$base-spacing;
+    padding: (layout.$base-spacing * 2) layout.$base-spacing;
 
     @media #{layout.$mq-small-desktop-and-up} {
       width: 50%;
@@ -202,11 +206,11 @@
       background: linear-gradient(to right, #8565ff, #6581ff);
       color: theme.$white;
       display: block;
-      font-size: 14px;
+      font-size: 18px;
       font-weight: bold;
       margin-top: layout.$base-spacing;
       min-height: 40px;
-      padding: math.div(layout.$base-spacing, 2);
+      padding: 20px;
       text-align: center;
     }
 
