fix always present scrollbars on windows

--- a/client/src/ui/theme/code-examples/index.scss
+++ b/client/src/ui/theme/code-examples/index.scss
@@ -5,7 +5,7 @@
   border-radius: $default-border-radius;
   margin: layout.$base-spacing 0;
   max-width: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding: layout.$base-spacing;
 
   code {
