--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -28,6 +28,13 @@
     width: 100%;
   }
 
+  h1,
+  h2,
+  h3,
+  h4 {
+    text-align: left;
+  }
+
   .main-heading-group {
     h1 {
       font-size: 48px;
