various updates based on conversation

--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -49,6 +49,13 @@
       margin-bottom: layout.$base-spacing;
       text-transform: uppercase;
     }
+
+    a {
+      &:link,
+      &:visited {
+        color: theme.$mdn-neutral700;
+      }
+    }
   }
 
   h3,
