--- a/client/src/plus/deep-dives/byline/index.scss
+++ b/client/src/plus/deep-dives/byline/index.scss
@@ -4,22 +4,43 @@
 @use "../../../ui/theme/index" as theme;
 
 .byline {
+  display: flex;
   font-family: theme.$inter-font-family;
   font-size: 16px;
-
-  @media #{layout.$mq-tablet-and-up} {
-    display: flex;
-    gap: math.div(layout.$base-spacing, 2);
-  }
+  gap: 20px;
 
   h3 {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1;
     margin-top: math.div(layout.$base-spacing, 4);
+
+    @media #{layout.$mq-tablet-and-up} {
+      font-size: 16px;
+    }
   }
 
-  .author-description {
-    color: theme.$mdn-neutral700;
-    margin-bottom: 0;
+  .author-links {
+    line-height: 130%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    a {
+      &:link,
+      &:visited {
+        color: theme.$mdn-neutral700;
+      }
+    }
+
+    li {
+      display: inline-block;
+      margin-right: math.div(layout.$base-spacing, 4);
+    }
+  }
+
+  .author-avatar {
+    img {
+      max-width: 50px;
+    }
   }
 }
