--- a/client/src/plus/deep-dives/survey/index.scss
+++ b/client/src/plus/deep-dives/survey/index.scss
@@ -56,12 +56,7 @@
 
   [type="text"] {
     margin: layout.$base-spacing 0;
-    max-width: 90%;
     width: 100%;
-
-    @media #{layout.$mq-small-desktop-and-up} {
-      max-width: 70%;
-    }
   }
 
   [type="radio"],
@@ -72,15 +67,24 @@
   [type="radio"] {
     @media #{layout.$mq-tablet-and-up} {
       display: block;
+      margin: 0 auto;
     }
   }
 
   textarea {
     margin-bottom: layout.$base-spacing;
+    width: 100%;
   }
 
   .survey-success {
     font-size: typography.$xl-font-size;
+    line-height: 150%;
     text-align: center;
+  }
+
+  .button-container {
+    display: flex;
+    gap: 36px;
+    justify-content: flex-end;
   }
 }
