fix: hide take survey cta if submitted
Do not show the take survey call to actions once the survey have been submitted.
Add min height to success container.

--- a/client/src/plus/deep-dives/survey/index.scss
+++ b/client/src/plus/deep-dives/survey/index.scss
@@ -77,8 +77,12 @@
   }
 
   .survey-success {
+    align-items: center;
+    display: flex;
     font-size: typography.$xl-font-size;
+    justify-content: center;
     line-height: 150%;
+    min-height: 250px;
     text-align: center;
   }
 
