--- a/client/src/ui/organisms/header/index.scss
+++ b/client/src/ui/organisms/header/index.scss
@@ -73,11 +73,12 @@
   }
 
   @media #{$mq-large-desktop-and-up} {
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr 1fr 70px;
   }
 
   .main-nav,
-  .header-search {
+  .header-search,
+  .auth-container {
     grid-column: 1/2;
   }
 
@@ -87,6 +88,10 @@
 
   .header-search {
     grid-row: 1/2;
+  }
+
+  .auth-container {
+    grid-row: 3/4;
   }
 
   @media #{$mq-tablet-and-up} {
@@ -99,11 +104,18 @@
       grid-column: 1/2;
       grid-row: 2/3;
     }
+
+    .auth-container {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      justify-self: flex-end;
+    }
   }
 
   @media #{$mq-large-desktop-and-up} {
     .main-nav,
-    .header-search {
+    .header-search,
+    .auth-container {
       grid-row: 1/2;
     }
 
@@ -113,6 +125,10 @@
 
     .header-search {
       grid-column: 2/3;
+    }
+
+    .auth-container {
+      grid-column: 3/4;
     }
   }
 }
