Adjust vertical-alignment for .bc-icon content

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
@@ -2,7 +2,14 @@
 
 .bc-icons {
   display: inline-block;
-  vertical-align: text-top;
+
+  .only-icon {
+    vertical-align: middle;
+
+    .ic-footnote {
+      vertical-align: sub;
+    }
+  }
 }
 
 .bc-icons i,
