--- a/client/src/ui/theme/color-palette/index.scss
+++ b/client/src/ui/theme/color-palette/index.scss
@@ -13,6 +13,17 @@ $mdn-neutral700: #42435a;
 $mdn-neutral800: #1f2033;
 $mdn-neutral900: #141422;
 
+$mdn-light-grey050: #fbfbfe;
+$mdn-light-grey100: #f9f9fb;
+$mdn-light-grey200: #f0f0f4;
+$mdn-light-grey300: #e0e0e6;
+$mdn-light-grey400: #cfcfd8;
+$mdn-light-grey500: #bfbfc9;
+$mdn-light-grey600: #afafba;
+$mdn-light-grey700: #9f9fad;
+$mdn-light-grey800: #8f8f9d;
+$mdn-light-grey900: #80808e;
+
 $mdn-blue050: #aaf2ff;
 $mdn-blue100: #80ebff;
 $mdn-blue200: #0df;
