--- a/client/src/ui/theme/utils/index.scss
+++ b/client/src/ui/theme/utils/index.scss
@@ -43,7 +43,7 @@
 }
 
 /*
- * A simply utility for setting a max width on an element that constrains its
+ * A simple utility for setting a max width on an element that constrains its
  * width to what is commonly known to be a readable line length for prose.
  */
 @mixin readable-line-length() {
