Remove strong tags to mimic the <h4 id='note'> as they aren't any in content

--- a/client/src/document/molecules/_notecards.scss
+++ b/client/src/document/molecules/_notecards.scss
@@ -8,7 +8,6 @@
 @mixin set-notecard-icon($icon) {
   h3,
   h4,
-  strong,
   &.inline {
     &::before {
       background: transparent url($icon) 0 0 no-repeat;
@@ -18,8 +17,7 @@
 
 @mixin set-notecard-icon-only($icon) {
   h3,
-  h4,
-  strong {
+  h4 {
     &::before {
       background-image: url($icon);
     }
@@ -46,8 +44,7 @@
   }
 
   h3,
-  h4,
-  #note {
+  h4 {
     /* 
      * Because we also allow h3, we need to undo some of its styling here.
      * This relates specifically to `background-color`, `color`, 
@@ -70,7 +67,6 @@
 
   h3,
   h4,
-  #note,
   &.inline {
     &::before {
       background-repeat: no-repeat;
@@ -83,12 +79,6 @@
       top: 2px;
       width: 20px;
     }
-  }
-
-  /* Mimic an <h4> block-level context for <strong> 
-  tags with <h4 id="note"> otherwise leave them alone */
-  #note {
-    display: block;
   }
 
   p {
