Fix missing-quotation mark error in JSFiddleEmbed; fix width (#4428)
* Fix missing-quotation mark error in JSFiddleEmbed

Fixes https://github.com/mdn/content/issues/7571
Fixes https://github.com/mdn/content/issues/7632

* Hardcode the JSFiddleEmbed width to 756.5px

--- a/kumascript/macros/JSFiddleEmbed.ejs
+++ b/kumascript/macros/JSFiddleEmbed.ejs
@@ -12,6 +12,6 @@ if (options.length != 0) {
     options += "/";
 }
 
-var s_result = '<p><iframe allowfullscreen="allowfullscreen" height="' + $2 + '" src="' + $0 + 'embedded/' + options + '></iframe></p>';
+var s_result = '<p><iframe allowfullscreen="allowfullscreen" width="756" height="' + $2 + '" src="' + $0 + 'embedded/' + options + '"></iframe></p>';
 
 %><%- s_result %>
