--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
@@ -86,5 +86,5 @@ $bc-partial-support-cross: rgba(144, 99, 18, 0.2);
 }
 
 .bc-supports-preview {
-  background-color: $primary-500;
+  background-color: $mdn-blue100;
 }
