Adjust vertical-alignment for .bc-icon content to achieve better alignment (#4390)
* Adjust vertical-alignment for .bc-icon content

* Target the icons that are adjacent to .bc-level-no and correct alignment

* Wrap version labels in a span tag

* Iron out the remaining gotchas with label/icon alignment

* Create utility to replace h4s in existing notecards with strong tags

* Use the formatNotecards utility

* Ensure previous id='note' styles are maintained by <strong>, for the time being

* Revert changes as they were meant for another branch, woops

* Revert last bit in _notecards.scss

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
@@ -1,8 +1,34 @@
 @use "sass:math";
 
+.bc-notes-wrapper {
+  .bc-supports {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.bc-level-yes {
+  & + {
+    span {
+      vertical-align: middle;
+      .bc-icons {
+        .only-icon {
+          vertical-align: middle;
+        }
+      }
+    }
+  }
+}
+
 .bc-icons {
   display: inline-block;
-  vertical-align: text-top;
+  .only-icon {
+    vertical-align: baseline;
+    .ic-footnote {
+      vertical-align: sub;
+    }
+  }
 }
 
 .bc-icons i,
