--- a/client/src/plus/deep-dives/byline/index.scss
+++ b/client/src/plus/deep-dives/byline/index.scss
@@ -10,20 +10,16 @@
   gap: 20px;
 
   h3 {
+    border-left: 0;
     font-size: 14px;
     line-height: 1;
+    margin-bottom: 0;
     margin-top: math.div(layout.$base-spacing, 4);
+    padding: 0;
 
     @media #{layout.$mq-tablet-and-up} {
       font-size: 16px;
     }
-  }
-
-  .author-links {
-    line-height: 130%;
-    list-style: none;
-    margin: 0;
-    padding: 0;
 
     a {
       &:link,
@@ -31,16 +27,24 @@
         color: theme.$mdn-neutral700;
       }
     }
-
-    li {
-      display: inline-block;
-      margin-right: math.div(layout.$base-spacing, 4);
-    }
   }
 
   .author-avatar {
     img {
       max-width: 50px;
+    }
+  }
+}
+
+ul.article-meta {
+  li {
+    color: theme.$mdn-neutral700;
+    display: inline-block;
+
+    &:first-child::after {
+      content: "·";
+      display: inline-block;
+      margin: 0 math.div(layout.$base-spacing, 2);
     }
   }
 }
