--- a/client/src/plus/deep-dives/overview/index.scss
+++ b/client/src/plus/deep-dives/overview/index.scss
@@ -6,143 +6,100 @@
 @use "../../../ui/theme/index" as theme;
 
 .page-content-container.plus {
+  background-color: theme.$mdn-neutral050;
   max-width: inherit;
-  padding: layout.$base-spacing 0;
+  padding: 0;
+
+  @media #{layout.$mq-tablet-and-up} {
+    margin-top: 24px;
+  }
 }
 
-.overview-hero {
-  color: theme.$text-color-inverted;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
+.deep-dives-overview {
+  background-color: theme.$white;
+  margin: 0 auto;
+  max-width: 600px;
 
   &::before {
-    background: transparent url("./assets/hero.svg") center center no-repeat;
+    background: transparent url("./assets/deep-dive-hero.svg") center center
+      no-repeat;
     background-size: cover;
     content: "";
     display: block;
-    height: 100%;
-    min-height: 365px;
-    position: absolute;
-    width: 100%;
-  }
-
-  .header-wrapper {
-    background-color: rgba(0, 0, 0, 0.4);
-    height: 100%;
     margin: auto;
     max-width: layout.$max-width-default;
+    min-height: 212px;
     padding: (layout.$base-spacing * 2) layout.$base-spacing;
     position: relative;
     z-index: layout.$bottom-layer;
-
-    @media #{layout.$mq-small-desktop-and-up} {
-      background-color: transparent;
-      display: grid;
-      gap: 0 math.div(layout.$base-spacing, 2);
-      gap: 0 (layout.$base-spacing * 2.5);
-      grid-template-columns: 1fr 0;
-      padding: 120px;
-    }
   }
+}
 
-  .header-content {
-    max-width: 550px;
-    position: relative;
-    z-index: layout.$top-layer;
-
-    h1 {
-      font-size: typography.$xxl-font-size;
-      line-height: typography.$heading-line-height;
-
-      margin-block-end: 0.67em;
-      margin-block-start: 0.67em;
-      margin-inline-end: 0;
-      margin-inline-start: 0;
-
-      @media #{layout.$mq-small-desktop-and-up} {
-        font-size: theme.$marketing-hero-h1-font-size;
-        margin: layout.$base-spacing 0;
-      }
+.deep-dive-toc,
+.overview-hero {
+  a {
+    &:link,
+    &:visited {
+      color: theme.$mdn-neutral900;
+      text-decoration: none;
     }
 
-    h2 {
-      background: theme.$gradient-accent;
-      background-clip: text;
-      color: theme.$mdn-green400;
-      font-size: 18px;
-      line-height: 160%;
-      margin-top: 0;
-      text-transform: uppercase;
-    }
-
-    a {
-      &:link,
-      &:visited {
-        color: theme.$white;
-        text-decoration: none;
-      }
-
-      &:hover,
-      &:focus {
-        text-decoration: underline;
-      }
-    }
-
-    p {
-      font-size: typography.$default-font-size;
-      margin-bottom: 0;
-      max-width: 450px;
-
-      @media #{layout.$mq-small-desktop-and-up} {
-        font-size: typography.$small-medium-font-size;
-      }
-    }
-  }
-
-  p.author,
-  .author-links {
-    font-size: 24px;
-  }
-
-  .author {
-    font-weight: bold;
-    line-height: 150%;
-  }
-
-  .author-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      display: inline-block;
-      margin-right: math.div(layout.$base-spacing, 4);
+    &:hover,
+    &:focus {
+      text-decoration: underline;
     }
   }
 }
 
-.overview-content-container {
+.overview-hero {
   padding: 0 layout.$base-spacing math.div(layout.$base-spacing, 2);
-
-  @media #{layout.$mq-small-desktop-and-up} {
-    padding: 0 120px 36px;
-  }
 
   @media #{layout.$mq-large-desktop-and-up} {
     margin: 36px auto layout.$base-spacing;
     max-width: layout.$max-width-default;
   }
 
-  h3,
-  h4 {
-    font-size: 24px;
-    margin: 36px 0;
+  .header-content {
+    margin-top: -36px;
+    position: relative;
+    z-index: layout.$top-layer;
+
+    @media #{layout.$mq-small-desktop-and-up} {
+      margin-top: -24px;
+    }
+
+    @media #{layout.$mq-large-desktop-and-up} {
+      margin-top: -56px;
+    }
+
+    h1 {
+      font-size: 36px;
+      line-height: typography.$heading-line-height;
+    }
   }
 
-  h4 {
+  .author {
+    font-weight: bold;
+    line-height: 150%;
+  }
+}
+
+.overview-content-container {
+  padding: 0 layout.$base-spacing math.div(layout.$base-spacing, 2);
+
+  h2 {
+    font-size: 14px;
+    margin-bottom: 16px;
+    text-transform: uppercase;
+  }
+
+  h3 {
     font-size: 18px;
-    margin: 36px 0;
+    margin: 16px 0;
+
+    @media #{layout.$mq-small-desktop-and-up} {
+      margin-top: 0;
+    }
   }
 
   p {
@@ -150,52 +107,66 @@
     line-height: 200%;
   }
 
-  li {
-    margin-bottom: layout.$base-spacing;
+  button.ghost {
+    color: theme.$mdn-neutral900;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 8px 0;
+    padding: 0;
+    text-decoration: none;
+  }
+
+  .show-contents-button {
+    &::before {
+      background: transparent url("./assets/plus.svg") center center no-repeat;
+      background-size: 18px;
+      content: "";
+      display: inline-block;
+      height: 18px;
+      margin-right: 8px;
+      vertical-align: sub;
+      width: 18px;
+    }
   }
 
   a.overview-series-list-item {
-    border-radius: 4px;
-    display: block;
-    min-height: 140px;
-    padding: math.div(layout.$base-spacing, 4);
-    position: relative;
-
     &:link,
     &:visited {
       color: theme.$mdn-neutral900;
     }
+  }
 
-    &:hover,
-    &:focus {
-      background-color: theme.$mdn-neutral100;
-      text-decoration: none;
+  .series-item {
+    border-top: 1px solid theme.$mdn-neutral100;
+    padding: 24px 0;
+
+    @media #{layout.$mq-small-desktop-and-up} {
+      display: flex;
+      gap: 24px;
+    }
+
+    &:last-child {
+      border-bottom: 1px solid theme.$mdn-neutral100;
+      padding: 24px 0;
     }
 
     &::before {
-      background-size: cover;
       border-radius: 4px;
       content: "";
       display: inline-block;
-      height: 270px;
+      height: 150px;
+      margin-bottom: 8px;
       width: 100%;
 
       @media #{layout.$mq-small-desktop-and-up} {
-        height: 128px;
-        position: absolute;
-        width: 164px;
+        flex: 0 0 30%;
+        height: 100px;
       }
     }
   }
 
-  .item-content {
-    @media #{layout.$mq-small-desktop-and-up} {
-      margin-left: 185px;
-    }
-
-    h4 {
-      margin: math.div(layout.$base-spacing, 2) 0;
-    }
+  .series-item-content {
+    flex: 1 1 70%;
 
     p {
       margin-bottom: 0;
@@ -206,6 +177,11 @@
     &::before {
       background: transparent url("./assets/planning-for-browser-support.svg")
         center center no-repeat;
+      background-size: cover;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        background-size: 100%;
+      }
     }
   }
 
@@ -213,6 +189,11 @@
     &::before {
       background: transparent url("./assets/your-browser-support-toolkit.svg")
         center center no-repeat;
+      background-size: cover;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        background-size: 100%;
+      }
     }
   }
 
@@ -222,26 +203,35 @@
     padding: math.div(layout.$base-spacing, 4);
 
     &::before {
-      background: transparent
-        url("./assets/practical-browser-support-solutions.png") center center
+      background: transparent url("./assets/unavailable0001.svg") center center
         no-repeat;
       background-size: cover;
-      border-radius: 4px;
-      content: "";
-      display: inline-block;
       filter: saturate(0);
-      height: 200px;
       width: 100%;
 
       @media #{layout.$mq-small-desktop-and-up} {
-        height: 128px;
-        position: absolute;
-        width: 164px;
+        background-size: 100%;
       }
     }
+  }
+}
 
-    h4 {
-      margin: math.div(layout.$base-spacing, 2) 0;
-    }
+.deep-dive-toc {
+  h4,
+  li {
+    border-left: 5px solid theme.$mdn-green400;
+    margin: 0;
+    padding: 8px;
+  }
+
+  h4 {
+    font-size: 14px;
+    margin-top: 24px;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
 }
