--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -17,7 +17,7 @@
   font-size: 18px;
   line-height: 200%;
   margin-bottom: layout.$base-spacing * 3;
-  padding: (layout.$base-spacing * 2) layout.$base-spacing;
+  padding: layout.$base-spacing layout.$base-spacing (layout.$base-spacing * 2);
   text-align: justify;
 
   code {
@@ -113,6 +113,26 @@
   }
 }
 
+.intro-banner {
+  background-color: theme.$mdn-violet900;
+  border-radius: 4px;
+  color: theme.$white;
+  margin: 24px 24px 0;
+  padding: 18px;
+
+  @media #{layout.$mq-small-desktop-and-up} {
+    margin: 24px;
+  }
+
+  a {
+    &:link,
+    &:visited {
+      color: theme.$white;
+      font-weight: bold;
+    }
+  }
+}
+
 .deep-dive-article-footer {
   background-color: theme.$mdn-violet900;
   font-size: typography.$small-medium-font-size;
@@ -121,7 +141,7 @@
 
   a {
     display: block;
-    padding: (layout.$base-spacing * 2) layout.$base-spacing;
+    padding: 32px layout.$base-spacing;
 
     @media #{layout.$mq-small-desktop-and-up} {
       width: 50%;
