use fork of @mdn/dinocons

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-browsers.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-browsers.scss
@@ -71,7 +71,7 @@
   &::before {
     // TODO(lucacasonato): should probably be replaced with an icon from
     // @mdn/dinocons.
-    background-image: url("/assets/deno-logo.svg");
+    background-image: url("~@mdn/dinocons/platforms/deno.svg");
   }
 }
 
