fix: changes to ready next version of market research pages
Updates to overview and deep dive article pages for market research v3

fix #4480

--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -117,6 +117,7 @@
   background-color: theme.$mdn-violet900;
   border-radius: 4px;
   color: theme.$white;
+  font-family: theme.$inter-font-family;
   margin: 24px 24px 0;
   padding: 18px;
 
