fix: updates to deep dive landing page
Additional updates to DDLP

--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -45,7 +45,7 @@
     h1 {
       font-size: 36px;
       letter-spacing: -0.5px;
-      line-height: 58px;
+      line-height: 100%;
       text-align: left;
     }
 
